# son-examples

./: .gitignore  README.md  build.sh  push.sh
docker-empty-vnf/: Dockerfile
docker-iperf3-vnf/: Dockerfile  README.md
docker-snort-ids/: Dockerfile  README.md
docker-snort-ids-vnf/: Dockerfile  README.md  snort.conf  start.sh
service-projects/: README.md  pack.sh  package_test_service.sh
service-projects/sonata-demo/: README.md  project.yml
service-projects/sonata-empty-service-emu/: project.yml
service-projects/sonata-fw-dpi-service-emu/: README.md  msd.yml  project.yml
service-projects/sonata-fw-service-emu/: project.yml
service-projects/sonata-fw-service-sp/: README.md  project.yml
service-projects/sonata-fw-vtc-service-emu/: README.md  msd.yml  project.yml
service-projects/sonata-fw-vtc-service-sp/: README.md  fw-vnf-vnfd.yml  pack.sh  project.yml  sonata-demo.yml  vtc-vnf-vnfd.yml
service-projects/sonata-fw-vtc-service-update-sp/: README.md  project.yml
service-projects/sonata-ovs-service-emu/: project.yml
service-projects/sonata-ovs-user-service-emu/: README.md  configure_ovs1.sh  msd.yml  msd_input.yml  msd_output.yml  msd_output2.yml  ped.yml  ped1.yml  ped2.yml  ped_ctrl.yml  ped_data.yml  profile_ctrl.yml  profile_data_demo.yml  project.yml  show_ctrl_profile.sh  son-exec  (+1 more)
sonata-sdk-install/: README.md  docker-compose.yml  son-emu_test_topo.py  start_son_analyze.sh  start_son_cli.sh
vnfs/: README.md  build.sh  pull.sh  push.sh
vnfs/sonata-vtc-vnf-docker/pfring_web_api/vtc/nDPI/example/: Makefile.am  ndpiReader  ndpiReader.c
(+874 files in other folders)
